2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc:
	  Fix assignment of nRegs and regs for accuse symbols.

2012-04-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed div/mod sign ext. to work with register result

2012-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Handling of pointer access in new allocator.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/z80/ralloc2.cc,
	  src/hc08/gen.h,
	  src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Improve hc08 cost function.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-14 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (pic16_genMult8XLit_n,pic16_genMult8X8_n):
	  work around early clobbering of input operands, fixes #3515677;
	  clean up, eliminate dead code

2012-04-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix isDead status for register H

2012-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc.h,